// Code generated by entproto. DO NOT EDIT.
syntax = "proto3";

package entpb;

import "google/protobuf/empty.proto";

import "google/protobuf/timestamp.proto";

option go_package = "github.com/morning-night-dream/platform/app/db/ent/proto/entpb";

message Article {
  bytes id = 1;

  string title = 2;

  string url = 3;

  string description = 4;

  string thumbnail = 5;

  google.protobuf.Timestamp created_at = 6;

  google.protobuf.Timestamp updated_at = 7;

  google.protobuf.Timestamp deleted_at = 8;

  repeated ArticleTag tags = 9;

  repeated ReadArticle read_articles = 10;
}

message CreateArticleRequest {
  Article article = 1;
}

message GetArticleRequest {
  bytes id = 1;

  View view = 2;

  enum View {
    VIEW_UNSPECIFIED = 0;

    BASIC = 1;

    WITH_EDGE_IDS = 2;
  }
}

message UpdateArticleRequest {
  Article article = 1;
}

message DeleteArticleRequest {
  bytes id = 1;
}

message ListArticleRequest {
  int32 page_size = 1;

  string page_token = 2;

  View view = 3;

  enum View {
    VIEW_UNSPECIFIED = 0;

    BASIC = 1;

    WITH_EDGE_IDS = 2;
  }
}

message ListArticleResponse {
  repeated Article article_list = 1;

  string next_page_token = 2;
}

message BatchCreateArticlesRequest {
  repeated CreateArticleRequest requests = 1;
}

message BatchCreateArticlesResponse {
  repeated Article articles = 1;
}

message ArticleTag {
  bytes id = 1;

  string tag = 2;

  bytes article_id = 3;

  google.protobuf.Timestamp created_at = 4;

  google.protobuf.Timestamp updated_at = 5;

  Article article = 6;
}

message CreateArticleTagRequest {
  ArticleTag article_tag = 1;
}

message GetArticleTagRequest {
  bytes id = 1;

  View view = 2;

  enum View {
    VIEW_UNSPECIFIED = 0;

    BASIC = 1;

    WITH_EDGE_IDS = 2;
  }
}

message UpdateArticleTagRequest {
  ArticleTag article_tag = 1;
}

message DeleteArticleTagRequest {
  bytes id = 1;
}

message ListArticleTagRequest {
  int32 page_size = 1;

  string page_token = 2;

  View view = 3;

  enum View {
    VIEW_UNSPECIFIED = 0;

    BASIC = 1;

    WITH_EDGE_IDS = 2;
  }
}

message ListArticleTagResponse {
  repeated ArticleTag article_tag_list = 1;

  string next_page_token = 2;
}

message BatchCreateArticleTagsRequest {
  repeated CreateArticleTagRequest requests = 1;
}

message BatchCreateArticleTagsResponse {
  repeated ArticleTag article_tags = 1;
}

message Auth {
  bytes id = 1;

  bytes user_id = 2;

  string login_id = 3;

  string email = 4;

  string password = 5;

  google.protobuf.Timestamp created_at = 6;

  google.protobuf.Timestamp updated_at = 7;

  User user = 8;
}

message CreateAuthRequest {
  Auth auth = 1;
}

message GetAuthRequest {
  bytes id = 1;

  View view = 2;

  enum View {
    VIEW_UNSPECIFIED = 0;

    BASIC = 1;

    WITH_EDGE_IDS = 2;
  }
}

message UpdateAuthRequest {
  Auth auth = 1;
}

message DeleteAuthRequest {
  bytes id = 1;
}

message ListAuthRequest {
  int32 page_size = 1;

  string page_token = 2;

  View view = 3;

  enum View {
    VIEW_UNSPECIFIED = 0;

    BASIC = 1;

    WITH_EDGE_IDS = 2;
  }
}

message ListAuthResponse {
  repeated Auth auth_list = 1;

  string next_page_token = 2;
}

message BatchCreateAuthsRequest {
  repeated CreateAuthRequest requests = 1;
}

message BatchCreateAuthsResponse {
  repeated Auth auths = 1;
}

message ReadArticle {
  bytes id = 1;

  bytes article_id = 2;

  bytes user_id = 3;

  google.protobuf.Timestamp read_at = 4;

  Article article = 5;
}

message CreateReadArticleRequest {
  ReadArticle read_article = 1;
}

message GetReadArticleRequest {
  bytes id = 1;

  View view = 2;

  enum View {
    VIEW_UNSPECIFIED = 0;

    BASIC = 1;

    WITH_EDGE_IDS = 2;
  }
}

message UpdateReadArticleRequest {
  ReadArticle read_article = 1;
}

message DeleteReadArticleRequest {
  bytes id = 1;
}

message ListReadArticleRequest {
  int32 page_size = 1;

  string page_token = 2;

  View view = 3;

  enum View {
    VIEW_UNSPECIFIED = 0;

    BASIC = 1;

    WITH_EDGE_IDS = 2;
  }
}

message ListReadArticleResponse {
  repeated ReadArticle read_article_list = 1;

  string next_page_token = 2;
}

message BatchCreateReadArticlesRequest {
  repeated CreateReadArticleRequest requests = 1;
}

message BatchCreateReadArticlesResponse {
  repeated ReadArticle read_articles = 1;
}

message User {
  bytes id = 1;

  google.protobuf.Timestamp created_at = 2;

  google.protobuf.Timestamp updated_at = 3;

  repeated Auth auths = 4;
}

message CreateUserRequest {
  User user = 1;
}

message GetUserRequest {
  bytes id = 1;

  View view = 2;

  enum View {
    VIEW_UNSPECIFIED = 0;

    BASIC = 1;

    WITH_EDGE_IDS = 2;
  }
}

message UpdateUserRequest {
  User user = 1;
}

message DeleteUserRequest {
  bytes id = 1;
}

message ListUserRequest {
  int32 page_size = 1;

  string page_token = 2;

  View view = 3;

  enum View {
    VIEW_UNSPECIFIED = 0;

    BASIC = 1;

    WITH_EDGE_IDS = 2;
  }
}

message ListUserResponse {
  repeated User user_list = 1;

  string next_page_token = 2;
}

message BatchCreateUsersRequest {
  repeated CreateUserRequest requests = 1;
}

message BatchCreateUsersResponse {
  repeated User users = 1;
}

service ArticleService {
  rpc Create ( CreateArticleRequest ) returns ( Article );

  rpc Get ( GetArticleRequest ) returns ( Article );

  rpc Update ( UpdateArticleRequest ) returns ( Article );

  rpc Delete ( DeleteArticleRequest ) returns ( google.protobuf.Empty );

  rpc List ( ListArticleRequest ) returns ( ListArticleResponse );

  rpc BatchCreate ( BatchCreateArticlesRequest ) returns ( BatchCreateArticlesResponse );
}

service ArticleTagService {
  rpc Create ( CreateArticleTagRequest ) returns ( ArticleTag );

  rpc Get ( GetArticleTagRequest ) returns ( ArticleTag );

  rpc Update ( UpdateArticleTagRequest ) returns ( ArticleTag );

  rpc Delete ( DeleteArticleTagRequest ) returns ( google.protobuf.Empty );

  rpc List ( ListArticleTagRequest ) returns ( ListArticleTagResponse );

  rpc BatchCreate ( BatchCreateArticleTagsRequest ) returns ( BatchCreateArticleTagsResponse );
}

service AuthService {
  rpc Create ( CreateAuthRequest ) returns ( Auth );

  rpc Get ( GetAuthRequest ) returns ( Auth );

  rpc Update ( UpdateAuthRequest ) returns ( Auth );

  rpc Delete ( DeleteAuthRequest ) returns ( google.protobuf.Empty );

  rpc List ( ListAuthRequest ) returns ( ListAuthResponse );

  rpc BatchCreate ( BatchCreateAuthsRequest ) returns ( BatchCreateAuthsResponse );
}

service ReadArticleService {
  rpc Create ( CreateReadArticleRequest ) returns ( ReadArticle );

  rpc Get ( GetReadArticleRequest ) returns ( ReadArticle );

  rpc Update ( UpdateReadArticleRequest ) returns ( ReadArticle );

  rpc Delete ( DeleteReadArticleRequest ) returns ( google.protobuf.Empty );

  rpc List ( ListReadArticleRequest ) returns ( ListReadArticleResponse );

  rpc BatchCreate ( BatchCreateReadArticlesRequest ) returns ( BatchCreateReadArticlesResponse );
}

service UserService {
  rpc Create ( CreateUserRequest ) returns ( User );

  rpc Get ( GetUserRequest ) returns ( User );

  rpc Update ( UpdateUserRequest ) returns ( User );

  rpc Delete ( DeleteUserRequest ) returns ( google.protobuf.Empty );

  rpc List ( ListUserRequest ) returns ( ListUserResponse );

  rpc BatchCreate ( BatchCreateUsersRequest ) returns ( BatchCreateUsersResponse );
}
